--- a/pipeline/4_pipelinerun.yaml
+++ b/pipeline/4_pipelinerun.yaml
@@ -13,3 +13,6 @@ spec:
     - name: image
       resourceRef:
         name: registry-bookinfo-productpage
+  params:
+    - name: NAMESPACE
+      value: dev-mn
